--- a/_sass/config/_config.scss
+++ b/_sass/config/_config.scss
@@ -9,6 +9,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
+$header-color: 	   #800000;       // maroon
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
