made css style changes

--- a/_sass/config/_config.scss
+++ b/_sass/config/_config.scss
@@ -11,6 +11,8 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $header-color: 	   #800000;       // maroon
+$header-color2:    #4682B4;       // steel blue
+
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
