--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper1"></div>
-      <div class="wrapper">
+      <div class="page-wrapper">
         {{ content }}
       </div>
     </div>
