added site logo and made more changes to layout

--- a/_sass/config/_config.scss
+++ b/_sass/config/_config.scss
@@ -41,6 +41,12 @@ $on-laptop:        800px;
     }
 }
 
+@mixin media-que($device) {
+    @media screen and (min-width: $device) {
+        @content;
+    }
+}
+
 // px to em converter function
 @function em($t, $c:$base-font-size){
   @return ($t / $c) * 1em;  
