--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+<!--     <a class="site-title" href="{{ site.baseurl }}/"><{{ site.title }} </a>
+ -->    <img class="site-img" src="../images/logo.png" alt="site logo">
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
