--- a/css/main.scss
+++ b/css/main.scss
@@ -8,5 +8,6 @@
 @import "base/base";
 @import "layout/layout";
 @import "modules/modules";
+@import "state/states";
 @import "syntax-highlighting";
 
