made css changes

--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -75,9 +75,9 @@
 /**
  * Site footer
  */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
+.l-site-footer {
     padding: $spacing-unit 0;
+    border-top: 1px solid $grey-color-light;
 }
 
 .footer-heading {
