--- a/_sass/state/_states.scss
+++ b/_sass/state/_states.scss
@@ -1,10 +1,10 @@
 
 .is-fadedIn{
-	animation: fadein .5s forwards 1s linear;
+	animation: fadein 1s forwards 1s linear;
 }
 
 .is-imgExpand{
-	animation: imgexpand .5s forwards 1s linear;
+	animation: imgexpand 1.5s forwards 1s linear;
 }
 
 // keyframes 
