--- a/_sass/modules/_modules.scss
+++ b/_sass/modules/_modules.scss
@@ -96,11 +96,10 @@
  */
 .page-content {
     position:relative;
-    margin-top: 35px;
-    margin-right:auto;
-    margin-left:auto;
+    margin: 100px auto;
     padding: $spacing-unit 0;
     width:90%;
+
 }
 
 /**
@@ -182,4 +181,19 @@
 .post-link {
     display: block;
     font-size: 24px;
+}
+
+
+
+/**
+ * Site footer
+ */
+.l-site-footer {
+    padding: $spacing-unit 0;
+    border-top: 2px solid $grey-color-light;
+    .footer-wrapper{
+        margin-right: auto;
+        margin-left: auto;
+        width:80%;
+    }
 }
